--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -2,3 +2,8 @@
 Ellipse 5.svg=@Ellipse 5,0
 Ellipse 6.svg=@Ellipse 6,0
 Ellipse 7.svg=@Ellipse 7,0
+Rectangle 6.svg=@Rectangle 6,0
+Rectangle 7.svg=@Rectangle 7,0
+Frame.svg=@Frame,0
+Frame (2).svg=@Frame (2),0
+Frame (1).svg=@Frame (1),0
