--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -7,3 +7,5 @@ Rectangle 7.svg=@Rectangle 7,0
 Frame.svg=@Frame,0
 Frame (2).svg=@Frame (2),0
 Frame (1).svg=@Frame (1),0
+Rectangle 8.svg=@Rectangle 8,0
+Phone 2.svg=@Phone 2,0
